test/data/codegen/invalid/cardinality_shape_zero_column_write_many/queries.cypher
// name: RemovePeople :many
MATCH (p:Person) WHERE p.id = $id DELETE p
